[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/random_events/NeedleEvent.gd" type="Script" id=1]
[ext_resource path="res://src/map/RandomWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/battle/RewardWindowPost.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/icons/Continue.tres" type="Resource" id=4]
[ext_resource path="res://resources/icons/Gamble.tres" type="Resource" id=5]
[ext_resource path="res://resources/icons/Ignore.tres" type="Resource" id=6]
[ext_resource path="res://resources/icons/Boost.tres" type="Resource" id=7]
[ext_resource path="res://resources/icons/Weaken.tres" type="Resource" id=8]

[node name="NeedleEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="IntroWindow" parent="." instance=ExtResource( 2 )]
margin_top = 12.0
margin_bottom = 85.0
title = "Needle and a coin"
description = "A hooded figure approaches with a needle and a coin. 50/50 chance: +1/-1 Max Hp."
option_names = [ "Choose heads", "Choose Tails", "Ignore" ]
option_icons = [ [ ExtResource( 5 ) ], [ ExtResource( 5 ) ], [ ExtResource( 6 ) ] ]

[node name="SuccessWindow" parent="." instance=ExtResource( 2 )]
visible = false
title = "Success"
description = "It was %s! The figure asks you to close your eyes. You feel a small pinch."
option_names = [ "Continue" ]
option_icons = [ [ ExtResource( 7 ), ExtResource( 4 ) ] ]

[node name="FailureWindow" parent="." instance=ExtResource( 2 )]
visible = false
title = "Failure"
description = "It was %s! without even thinking, the figure jabs the needle in your right arm."
option_names = [ "Continue" ]
option_icons = [ [ ExtResource( 8 ), ExtResource( 4 ) ] ]

[node name="EscapeWindow" parent="." instance=ExtResource( 2 )]
visible = false
title = "Escape"
description = "It was %s! As the figure reaches for the needle, you quickly turn around and run."
option_names = [ "Continue" ]
option_icons = [ [ ExtResource( 4 ) ] ]

[node name="IgnoreWindow" parent="." instance=ExtResource( 2 )]
visible = false
custom_styles/panel = ExtResource( 3 )
title = "Ignore"
description = "Despite the allure of strangers with needles, you politely decline."
option_names = [ "Continue" ]
option_icons = [ [ ExtResource( 4 ) ] ]

[connection signal="option_0_pressed" from="IntroWindow" to="." method="_on_IntroWindow_option_0_pressed"]
[connection signal="option_1_pressed" from="IntroWindow" to="." method="_on_IntroWindow_option_1_pressed"]
[connection signal="option_2_pressed" from="IntroWindow" to="." method="_on_IntroWindow_option_2_pressed"]
[connection signal="option_0_pressed" from="SuccessWindow" to="." method="_on_SuccessWindow_option_0_pressed"]
[connection signal="option_0_pressed" from="FailureWindow" to="." method="_on_FailureWindow_option_0_pressed"]
[connection signal="option_0_pressed" from="EscapeWindow" to="." method="_on_EscapeWindow_option_0_pressed"]
